--- a/P006675.opf/layers/v001/Pagination.yml
+++ b/P006675.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 2f0b451c931f40608da63c8d85e4fe35
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   12385b8389dc4f589558a1ae7f472128:
