--- a/P006675.opf/meta.yml
+++ b/P006675.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P006675
 initial_creation_type: ocr
+created_at: 22/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W1KG25864
   title: བོད་ཀྱི་བརྡ་སྤྲོད་རིག་པའི་ཁྲིད་རྒྱུན་ལག་བསྟར་མ།
