--- a/P006675.opf/meta.yml
+++ b/P006675.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P006675
 initial_creation_type: ocr
 created_at: 22/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 12:15:13.617158
 source_metadata:
   id: bdr:W1KG25864
   title: བོད་ཀྱི་བརྡ་སྤྲོད་རིག་པའི་ཁྲིད་རྒྱུན་ལག་བསྟར་མ།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 578
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
